<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/no_internet_alert_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="70dp"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="125dp"
                android:src="@drawable/ic_wifi_blue_24dp"
                android:contentDescription="@string/todo" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="135dp"
                android:src="@drawable/ic_cellular_no_internet_blue_24dp"
                android:contentDescription="@string/todo" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp"
                android:elevation="8dp"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_gradient_light_blue">

                    <TextView
                        android:id="@+id/no_internet_alert_title_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/fredericka_the_great"
                        android:gravity="center_horizontal"
                        android:text="@string/oh_no"
                        android:textColor="#4FC3F7"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/no_internet_alert_text_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/no_internet_alert_title_text"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="30dp"
                        android:alpha="0.8"
                        android:gravity="center_horizontal"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/no_internet_alert_text_description"
                        android:textColor="#81D4FA"
                        android:textSize="17sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/no_internet_alert_text_description"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/no_internet_alert_retry_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="30dp"
                            android:layout_marginVertical="5dp"
                            android:background="@drawable/button_theme_light_blue"
                            android:fontFamily="sans-serif"
                            android:text="@string/retry"
                            android:textColor="#81D4FA"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/no_internet_alert_cancel_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="30dp"
                            android:layout_marginVertical="5dp"
                            android:background="@drawable/button_theme_light_blue"
                            android:fontFamily="sans-serif"
                            android:text="@android:string/cancel"
                            android:textColor="#81D4FA"
                            tools:ignore="ButtonStyle" />
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:alpha="3"
        android:fontFamily="@font/fredericka_the_great"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#4FC3F7"
        android:textSize="25sp" />

</RelativeLayout>